[gd_scene load_steps=5 format=3 uid="uid://ci0bwayqypyei"]

[ext_resource type="Script" path="res://Scripts/UI/menuScript.gd" id="1_pkdlk"]
[ext_resource type="Theme" uid="uid://l78c22phb3jp" path="res://Scenes/Particles/Default.tres" id="2_ruij2"]
[ext_resource type="Texture2D" uid="uid://b58for0ds8iwd" path="res://Assets/UIAssets/logo.png" id="3_4hu5l"]
[ext_resource type="Texture2D" uid="uid://wqmheqbtdhqr" path="res://Assets/UIAssets/SAPCE.webp" id="4_np7oi"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_pkdlk")

[node name="BackGround" type="TextureRect" parent="."]
z_index = -1
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00937503
anchor_top = -0.0722222
anchor_right = 1.01042
anchor_bottom = 1.07407
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("4_np7oi")
stretch_mode = 1

[node name="Logo" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.23125
anchor_top = 0.174074
anchor_right = 0.76875
anchor_bottom = 0.281481
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("3_4hu5l")
stretch_mode = 3
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
mouse_filter = 2
alignment = 1

[node name="Start" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
theme = ExtResource("2_ruij2")
text = "Start Game"

[node name="Options" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ruij2")
text = "Options"

[node name="Quit" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_ruij2")
text = "Quit"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
